--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,15 +15,17 @@ jobs:
         name: 'linux'
         arch: 'x64'
         imageName: 'ubuntu-16.04'
+        extension: ''
       mac:
         name: 'mac'
         arch: 'x64'
         imageName: 'macos-10.13'
-        extension: '.exe'
+        extension: ''
       win64:
         name: 'win64'
         arch: 'x64'
         imageName: 'vs2017-win2016'
+        extension: '.exe'
 
   pool:
     vmImage: $(imageName)
@@ -34,7 +36,7 @@ jobs:
       version: '12.x'
 
   - script: |
-      yarn add nexe -D 
+      yarn global add nexe
       yarn install
     displayName: 'prepare'
 
