Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,6 +60,7 @@ jobs:
   steps:
   - task: GitHubRelease@1
     inputs:
+      gitHubConnection: $GITHUBCONNECT
       repositoryName: '$(Build.Repository.Name)'
       action: 'create'
       target: '$(Build.SourceVersion)'
