--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -64,6 +64,8 @@ jobs:
       repositoryName: '$(Build.Repository.Name)'
       action: 'create'
       target: '$(Build.SourceVersion)'
-      tagSource: 'gitTag'
+      tagSource: 'userSpecifiedTag'
+      tag: 'latest'
+      title: 'latest'
       changeLogCompareToRelease: 'lastFullRelease'
       changeLogType: 'commitBased'
