--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,14 +69,19 @@ jobs:
       buildType: 'current'
       downloadType: 'specific'
       downloadPath: '$(System.ArtifactsDirectory)'
-      
+  
+  - script: |
+      ls -a $(System.ArtifactsDirectory)
+      ls -a $(Build.ArtifactStagingDirectory)
+    displayName: 'package'
+
   - task: GitHubRelease@1
     inputs:
       gitHubConnection: 'github.com_abnerlee'
       repositoryName: '$(Build.Repository.Name)'
-      action: 'create'
+      action: 'edit'
       target: '$(Build.SourceVersion)'
-      tagSource: 'userSpecifiedTag'
       tag: 'latest'
+      assetUploadMode: 'replace'
       changeLogCompareToRelease: 'lastFullRelease'
       changeLogType: 'commitBased'
