--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ jobs:
   #- script: |
   #    yarn pkg-$(name)
   #    echo 'Done'
-  - script: nexe index.js --output $(Build.BinariesDirectory)/bin/$(name)/picgo$(extension)
+  - script: nexe index.js --output $()/bin/$(name)/picgo$(extension)
     displayName: 'package'
 
   - task: ArchiveFiles@2
@@ -59,6 +59,12 @@ jobs:
       targetPath: '$(Build.ArtifactStagingDirectory)/'
       artifact: 'picgo-cli-$(name)'
       publishLocation: 'pipeline'
+
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'picgo-cli-$(name)'
+      publishLocation: 'Container'
 
   - script: |
       ls -a $(System.ArtifactsDirectory)
@@ -78,6 +84,7 @@ jobs:
   - script: |
       ls -a $(System.ArtifactsDirectory)
       ls -a $(Build.ArtifactStagingDirectory)
+      ls -a $(Pipeline.Workspace)
     displayName: 'check result'
 
   - task: GitHubRelease@1
