Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,8 @@ jobs:
   #- script: |
   #    yarn pkg-$(name)
   #    echo 'Done'
-  - script: nexe index.js --output $()/bin/$(name)/picgo$(extension)
+  - script: |
+      nexe index.js --output $(Build.BinariesDirectory)/bin/$(name)/picgo$(extension)
     displayName: 'package'
 
   - task: ArchiveFiles@2
