--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,13 @@ jobs:
         arch: 'x64'
         imageName: 'ubuntu-16.04'
         extension: ''
+        cmdPrefix: ''
       mac:
         name: 'mac'
         arch: 'x64'
         imageName: 'macos-10.13'
         extension: ''
+        cmdPrefix: ''
       win64:
          name: 'win64'
          arch: 'x64'
