--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -99,9 +99,10 @@ jobs:
     inputs:
       gitHubConnection: 'github.com_abnerlee'
       repositoryName: '$(Build.Repository.Name)'
-      action: 'create'
+      action: 'edit'
       target: '$(Build.SourceVersion)'
       tag: 'latest'
       assets: '$(Build.ArtifactStagingDirectory)/picgo-cli/*'
+      assetUploadMode: 'replace'
       changeLogCompareToRelease: 'lastFullRelease'
       changeLogType: 'commitBased'
