--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,9 +84,7 @@ jobs:
   - task: CmdLine@2  # this step generates the output variable
     name: GetVersion
     inputs:
-      script: |
-        $(cmdPrefix) version = "$($(Build.BinariesDirectory)/bin/$(name)/picgo$(extension) --version)"
-        $(cmdPrefix) echo "##vso[task.setvariable variable=PICGO_VERSION;]$version"
+      script: echo "##vso[task.setvariable variable=PICGO_VERSION;]'$($(Build.BinariesDirectory)/bin/$(name)/picgo$(extension) --version)'"
 
 - job: Release
   dependsOn: BaseBuild
@@ -106,6 +104,7 @@ jobs:
 
   - task: GitHubRelease@1
     condition: and(succeeded(), 'refs/heads/master')
+    name: GitHubReleaseForMasterLatest
     inputs:
       gitHubConnection: 'github.com_abnerlee'
       repositoryName: '$(Build.Repository.Name)'
@@ -119,6 +118,7 @@ jobs:
 
   - task: GitHubRelease@1
     condition: and(succeeded(), 'refs/heads/master')
+    name: GitHubReleaseForVersion
     inputs:
       gitHubConnection: 'github.com_abnerlee'
       repositoryName: '$(Build.Repository.Name)'
@@ -131,6 +131,7 @@ jobs:
       changeLogType: 'commitBased'
 
   - task: GitHubRelease@1
+    name: GitHubReleaseForDevelopLatest
     condition: and(succeeded(), 'refs/heads/develop')
     inputs:
       gitHubConnection: 'github.com_abnerlee'
